--- a/public/index.html
+++ b/public/index.html
@@ -34,6 +34,7 @@
           <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" />
           <button class="btn btn-outline-success" type="submit">Search</button>
         </form>
+        <a class="chat btn btn-outline-success d-none" href="/chat.html">채팅</a>
       </div>
     </nav>
 
